src/tests/fixtures/arguments/NoArgsWithNever.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(args: never): string {
    console.log("hello");
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/NoArgsWithNever.ts:4:15 - error: Expected GraphQL field arguments to be typed using a literal object: `{someField: string}`. If there are no arguments, you can use `args: unknown`.

4   hello(args: never): string {
                ~~~~~
